using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Game.Values.AnimationParameters
{
    public class Anna
    {
        public const string Idle = "Idle";
        public const string Walk = "Walk";
        public const string Walking = "Walking";
        public const string Jump = "Jump";
        public const string Attack = "Attack";
        public const string Special = "Special";
        public const string Invulnerable = "Invulnerable";
        public const string Speed = "Speed";
        public const string CastInvulnerability = "CastInvulnerability";
    }
}
